# transition_app

./: .gitignore  CLAUDE.md  README.md  compose.yml  package-lock.json  package.json
docs/application/: index.md
docs/test/: talk.md  transition.md
infra/: INFRASTRUCTURE.md  README.md  main.tf
mobile/: .eslintignore  .eslintrc.js  .prettierignore  App.tsx  App_simple.tsx  README.md  app.json  package-lock.json  package.json  package_simple.json
mobile/assets/: README.md
mobile/src/screens/: TalkScreen.tsx  TranslationScreen.tsx  VocabularyScreen.tsx
mobile/src/services/: api.ts
server/: Dockerfile  Dockerfile.prd  main.py  pyproject.toml
server/services/: google_cloud.py  notion.py
web/: package-lock.json  package.json
web/src/app/: Client.tsx  Navigation.tsx  layout.tsx  page.tsx
web/src/app/(actions)/: api.ts  getToken.ts
web/src/app/talk/: page.tsx
web/src/app/talk/client/: index.tsx
web/src/app/vocabulary/: page.tsx
web/src/app/vocabulary/client/: index.tsx
web/src/components/: navigation.tsx
web/src/components/ui/: multi-select.tsx
web/src/lib/: header.ts
